# nek

./: .gitignore  CMakeLists.txt  fib.nek  nek.cpp  principals.md  readme.md  standard.cpp  todo.md
